openshift/assets/generateSudoku.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: generate-sudoku
  annotations:
    prometheus.io/scrape: true
  labels:
    app: generate-sudoku
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: generate-sudoku
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: generate-sudoku
  labels:
    app: generate-sudoku
spec:
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - generate-sudoku
        from:
          kind: ImageStreamTag
          name: generate-sudoku:latest
  replicas: 1
  selector:
    matchLabels:
      app: generate-sudoku
  template:
    metadata:
      name: generate-sudoku
      labels:
        app: generate-sudoku
    spec:
      containers:
        - name: generate-sudoku
          image: generate-sudoku:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 1
