openshift/assets/mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: mongodb://{}:{}@{.spec.clusterIP}:{.spec.ports[?(.name=="mongodb")].port}
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - name: mongodb
      nodePort: 0
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongodb
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - capabilities: {}
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            initialDelaySeconds: 30
            tcpSocket:
              port: 27017
            timeoutSeconds: 1
          name: mongodb
          ports:
            - containerPort: 27017
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb
