openshift/assets/rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  ports:
    - name: 15671-tcp
      nodePort: 0
      port: 15671
      protocol: TCP
      targetPort: 15671
    - name: 15672-tcp
      nodePort: 0
      port: 15672
      protocol: TCP
      targetPort: 15672
    - name: 15691-tcp
      nodePort: 0
      port: 15691
      protocol: TCP
      targetPort: 15691
    - name: 15692-tcp
      nodePort: 0
      port: 15692
      protocol: TCP
      targetPort: 15692
    - name: 25672-tcp
      nodePort: 0
      port: 25672
      protocol: TCP
      targetPort: 25672
    - name: 4369-tcp
      nodePort: 0
      port: 4369
      protocol: TCP
      targetPort: 4369
    - name: 5671-tcp
      nodePort: 0
      port: 5671
      protocol: TCP
      targetPort: 5671
    - name: 5672-tcp
      nodePort: 0
      port: 5672
      protocol: TCP
      targetPort: 5672
  selector:
    app: rabbitmq
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - capabilities: {}
          image: rabbitmq:3-management
          imagePullPolicy: IfNotPresent
          name: rabbitmq
          ports:
            - containerPort: 15671
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
            - containerPort: 15691
              protocol: TCP
            - containerPort: 15692
              protocol: TCP
            - containerPort: 25672
              protocol: TCP
            - containerPort: 4369
              protocol: TCP
            - containerPort: 5671
              protocol: TCP
            - containerPort: 5672
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq
