openshift/assets/startSudoku.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: start-sudoku
  annotations:
    prometheus.io/scrape: true
  labels:
    app: start-sudoku
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: start-sudoku
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: start-sudoku
  labels:
    app: start-sudoku
spec:
  path: /sudokus/start
  to:
    kind: Service
    name: start-sudoku
  tls:
    termination: edge
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: start-sudoku
  labels:
    app: start-sudoku
spec:
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - start-sudoku
        from:
          kind: ImageStreamTag
          name: start-sudoku:latest
  replicas: 1
  selector:
    matchLabels:
      app: start-sudoku
  template:
    metadata:
      name: start-sudoku
      labels:
        app: start-sudoku
    spec:
      containers:
        - name: start-sudoku
          image: start-sudoku:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 512Mi
            # requests:
            #   cpu: 1
