openshift/assets/users.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: users
  annotations:
    prometheus.io/scrape: true
  labels:
    app: users
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: users
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: users
  labels:
    app: users
spec:
  path: /users
  to:
    kind: Service
    name: users
  tls:
    termination: edge
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: users
  labels:
    app: users
spec:
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - users
        from:
          kind: ImageStreamTag
          name: users:latest
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      name: users
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: users:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 1
